fix(Chip): correct spacing between chips in vertical mode
ISSUES CLOSED: #1803

--- a/terminus-ui/chip/src/chip-collection.component.scss
+++ b/terminus-ui/chip/src/chip-collection.component.scss
@@ -2,6 +2,7 @@
 
 
 .ts-chip-collection {
+  --chip-vertical-margin: #{spacing(small, 2)};
   display: block;
 
   &--vertical {
@@ -10,6 +11,10 @@
     .ts-chip-collection-wrapper {
       align-items: flex-start;
       flex-direction: column;
+    }
+
+    .ts-chip {
+      margin-bottom: var(--chip-vertical-margin);
     }
   }
 }
